fixed calendly link

--- a/includes/gtm-body.html
+++ b/includes/gtm-body.html
@@ -1,4 +1,12 @@
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KWNP27BF"
+<script>
+(function() {
+  var ns = document.getElementById('gtm-noscript');
+  if (ns && document.body) {
+    document.body.insertBefore(ns, document.body.firstChild);
+  }
+})();
+</script>
+<noscript id="gtm-noscript"><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KWNP27BF"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
