--- a/styles/site-background.css
+++ b/styles/site-background.css
@@ -13,7 +13,7 @@ body::before {
   position: fixed;
   inset: 0;
   pointer-events: none;
-  background-image: url("/assets/bg_grid.svg");
+  background-image: url("../assets/bg_grid.svg");
   background-repeat: repeat;
   background-size: 512px 512px;
   opacity: var(--bg-grid-opacity);
